my update to the code

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Homework baby</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae dignissimos vero ducimus praesentium, nam tempore eum natus, et recusandae harum itaque minima! Nisi illo autem voluptatem veritatis nam voluptate repellendus omnis odio minima ea veniam, a, exercitationem quod laudantium. Possimus alias nisi exercitationem officia fugit, voluptate corrupti nam perferendis velit.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae dignissimos vero ducimus praesentium, nam tempore eum natus, et recusandae harum itaque minima! Nisi illo autem voluptatem veritatis nam voluptate repellendus omnis odio minima ea veniam, a, exercitationem quod laudantium.</p>
+    <img src="lincolnquote.gif" alt="Smiley face" height="42" width="42">
 </body>
 </html>
